--- a/views/index.html
+++ b/views/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="/css/styles.css">
+    <title>Crafsy</title>
 </head>
 <body>
     <header>
         <div class="logo">
-            <img src="/images/logo.png" alt="">
+            <img src="/img/logo.png" alt="">
         </div>
         <nav>
             <ul>
@@ -27,7 +28,7 @@
         <section>
             <article>
                 <div class="img_producto">
-                    <img src="/images/img-phone-1.jpg" alt="">
+                    <img src="/img/img-phone-1.jpg" alt="">
                 </div>
                 <h3>Nombre del Producto</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus ducimus ipsum cumque, iure molestiae laboriosam vero id eligendi amet, animi quod? Possimus aliquam, ex quibusdam sunt nulla iusto voluptate dolore?</p>
@@ -35,7 +36,7 @@
             </article>
             <article>
                 <div class="img_producto">
-                    <img src="/images/img-phone-02.jpg" alt="">
+                    <img src="/img/img-phone-02.jpg" alt="">
                 </div>
                 <h3>Nombre del Producto</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus ducimus ipsum cumque, iure molestiae laboriosam vero id eligendi amet, animi quod? Possimus aliquam, ex quibusdam sunt nulla iusto voluptate dolore?</p>
@@ -43,7 +44,7 @@
             </article>
             <article>
                 <div class="img_producto">
-                    <img src="/images/img-phone-03.jpg" alt="">
+                    <img src="/img/img-phone-03.jpg" alt="">
                 </div>
                 <h3>Nombre del Producto</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus ducimus ipsum cumque, iure molestiae laboriosam vero id eligendi amet, animi quod? Possimus aliquam, ex quibusdam sunt nulla iusto voluptate dolore?</p>
@@ -51,7 +52,7 @@
             </article>
             <article>
                 <div class="img_producto">
-                    <img src="/images/img-phone-1.jpg" alt="">
+                    <img src="/img/img-phone-1.jpg" alt="">
                 </div>
                 <h3>Nombre del Producto</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus ducimus ipsum cumque, iure molestiae laboriosam vero id eligendi amet, animi quod? Possimus aliquam, ex quibusdam sunt nulla iusto voluptate dolore?</p>
@@ -59,7 +60,7 @@
             </article>
             <article>
                 <div class="img_producto">
-                    <img src="/images/img-phone-02.jpg" alt="">
+                    <img src="/img/img-phone-02.jpg" alt="">
                 </div>
                 <h3>Nombre del Producto</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus ducimus ipsum cumque, iure molestiae laboriosam vero id eligendi amet, animi quod? Possimus aliquam, ex quibusdam sunt nulla iusto voluptate dolore?</p>
@@ -67,7 +68,7 @@
             </article>
             <article>
                 <div class="img_producto">
-                    <img src="/images/img-phone-03.jpg" alt="">
+                    <img src="/img/img-phone-03.jpg" alt="">
                 </div>
                 <h3>Nombre del Producto</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus ducimus ipsum cumque, iure molestiae laboriosam vero id eligendi amet, animi quod? Possimus aliquam, ex quibusdam sunt nulla iusto voluptate dolore?</p>
@@ -79,25 +80,25 @@
                 <h2>Tutoriales</h2>
                 <article>
                     <div>
-                        <img src="/images/aside-01.jpg" alt="">
+                        <img src="/img/aside-01.jpg" alt="">
                     </div>
                     <p>Titulo de tutorial de reparacion</p>
                 </article>
                 <article>
                     <div>
-                        <img src="/images/aside-02.jpg" alt="">
+                        <img src="/img/aside-02.jpg" alt="">
                     </div>
                     <p>Titulo de tutorial de reparacion</p>
                 </article>
                 <article>
                     <div>
-                        <img src="/images/aside-03.jpg" alt="">
+                        <img src="/img/aside-03.jpg" alt="">
                     </div>
                     <p>Titulo de tutorial de reparacion</p>
                 </article>
                 <article>
                     <div>
-                        <img src="/images/aside-04.jpg" alt="">
+                        <img src="/img/aside-04.jpg" alt="">
                     </div>
                     <p>Titulo de tutorial de reparacion</p>
                 </article>
@@ -106,12 +107,12 @@
                 <h2>Publicidad</h2>
                 <div>
                     <a href="">
-                        <img src="/images/ad-01.jpg" alt="add01">
+                        <img src="/img/ad-01.jpg" alt="add01">
                     </a>
                 </div>
                 <div>
                     <a href="">
-                        <img src="/images/ad-02.jpg" alt="add02">
+                        <img src="/img/ad-02.jpg" alt="add02">
                     </a>
                 </div>
             </section>
