cambios en header y general

--- a/views/index.html
+++ b/views/index.html
@@ -4,13 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/styles.css">
-    <title>Crafsy</title>
+    <!-- fontawesome -->
+    <script src="https://kit.fontawesome.com/d4dd8b770b.js" crossorigin="anonymous"></script>    
+    <!-- css -->
+    <link rel="stylesheet" href="/css/styles.css">    
+    <title>Craftsy</title>
 </head>
-<body>
+<body class="home">
     <header>
+        <div class="top">
         <div class="logo">
             <img src="/img/logo.png" alt="">
+        </div>
+        <div class="burger">
+            <i class="fa-solid fa-ellipsis-vertical"></i>
         </div>
         <nav>
             <ul>
