actualizo cambio en index

--- a/views/index.html
+++ b/views/index.html
@@ -19,6 +19,7 @@
         <div class="burger">
             <i class="fa-solid fa-ellipsis-vertical"></i>
         </div>
+        </div>
         <nav>
             <ul>
                 <li><a href="">Smartphones</a></li>
