estilos en mobile terminados

--- a/public/css/header.css
+++ b/public/css/header.css
@@ -5,23 +5,26 @@ header{
 }
 
 header .top{
+    max-height: 80px;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
 }
 
 header .logo{
+    display: flex;
+    align-items: center;
     width: 50%;
 }
 
 header img{
     padding: 10px;
-    width: 75%;
+    width: 150%;
 }
 
 header .burger{
     font-size: 30px;
-    padding: 20px;
+    padding: 20px 30px;
     color: white;
     border: 1px solid white;
     border-radius: 10px;
