--- a/views/index.html
+++ b/views/index.html
@@ -33,7 +33,7 @@
         </nav>
     </header>
     <main>
-        <section>
+        <section class="product_cards">
             <article>
                 <div class="img_producto">
                     <img src="/img/img-phone-1.jpg" alt="">
@@ -87,31 +87,23 @@
             <section>
                 <h2>Tutoriales</h2>
                 <article>
-                    <div>
                         <img src="/img/aside-01.jpg" alt="">
-                    </div>
                     <p>Titulo de tutorial de reparacion</p>
                 </article>
                 <article>
-                    <div>
                         <img src="/img/aside-02.jpg" alt="">
-                    </div>
                     <p>Titulo de tutorial de reparacion</p>
                 </article>
                 <article>
-                    <div>
                         <img src="/img/aside-03.jpg" alt="">
-                    </div>
                     <p>Titulo de tutorial de reparacion</p>
                 </article>
                 <article>
-                    <div>
                         <img src="/img/aside-04.jpg" alt="">
-                    </div>
                     <p>Titulo de tutorial de reparacion</p>
                 </article>
             </section>
-            <section>
+            <section class="publicidad">
                 <h2>Publicidad</h2>
                 <div>
                     <a href="">
