--- a/views/index.html
+++ b/views/index.html
@@ -86,6 +86,7 @@
         <aside>
             <section>
                 <h2>Tutoriales</h2>
+                <div class="grid">
                 <article>
                         <img src="/img/aside-01.jpg" alt="">
                     <p>Titulo de tutorial de reparacion</p>
@@ -102,19 +103,20 @@
                         <img src="/img/aside-04.jpg" alt="">
                     <p>Titulo de tutorial de reparacion</p>
                 </article>
+                </div>
             </section>
             <section class="publicidad">
                 <h2>Publicidad</h2>
-                <div>
+                <div class="propaganda">
                     <a href="">
                         <img src="/img/ad-01.jpg" alt="add01">
-                    </a>
-                </div>
-                <div>
+                    </a>   
+                    </div>
+                    <div class="propaganda">
                     <a href="">
                         <img src="/img/ad-02.jpg" alt="add02">
-                    </a>
-                </div>
+                    </a>                
+                    </div>
             </section>
         </aside>
     </main>
