--- a/public/css/header.css
+++ b/public/css/header.css
@@ -32,9 +32,9 @@ header .burger{
 }
 
 header nav{
+    display: none;
     margin-top: 20px;
     text-align: center;
-    display: none;
 }
 
 header nav ul{
@@ -53,7 +53,19 @@ header nav a{
 
 /* Desktop */
 @media (min-width:769px) {
+    header{
+        margin-top: 10px;
+        padding-right: 20px;
+        height: 70px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+    header .top{
+        width: 10%;
+    }
     header nav{
+        width: 90%;
         display: flex;
         flex-wrap: wrap;
         justify-content: space-between;
