--- a/public/css/main.css
+++ b/public/css/main.css
@@ -65,8 +65,6 @@
 /* tablet */
 @media (min-width:426px) {
     .home main .product_cards{
-        background-color: white;
-        padding: 10px;
         display: flex;
         flex-wrap: wrap;
         justify-content: space-between;
@@ -110,6 +108,7 @@
 /* desktop */
 @media (min-width:769px) {
     .home main{
+        width: 100%;
         display: flex;
         flex-wrap: wrap;
         justify-content: space-between;
@@ -121,7 +120,7 @@
         width: 24%;
         margin-top: 0;
     }
-    .home aside section h2:after{
+    .home aside section h2:first-child{
         margin-top: 0;
     }
     .home main aside section .grid{
